# hello-world

./: Cargo.toml
.github/workflows/: ci.yml  release.yml
ci/: calculate.py  job.yml  jobs.yml  run-build.sh  run.sh
ci/docker/dist-aarch64-linux/: Dockerfile
ci/docker/dist-x86-64-linux/: Dockerfile
ci/scripts/: install-rust.sh  package-artifacts.sh  run-with-docker.sh  run-without-docker.sh
