[package]
name = "foo"
version = "0.1.0"
edition = "2021"
author = ["luuux98@163.com"]
license = "MIT OR Apache-2.0"
description = "hello-world"
homepage = "https://github.com/LuuuXXX/hello-world"
documentation = ""
repository = "https://github.com/LuuuXXX/hello-world"
readme = "https://github.com/LuuuXXX/hello-world/blob/master/README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
